Revision history for Perl extension PPM::Repositories

0.12  (unreleased)
    - remove smueller repository [http://rt.cpan.org/Ticket/Display.html?id=23979]
    - remove datetime repository [http://rt.cpan.org/Ticket/Display.html?id=17391]
    - removed dead repositories: soulcage, esoft, savage, spurkis, crazy, dada, rto
    - removed already commented out repositories: xray, perlxml
    - turned jenda's repository to inactive
    - added tcool and trouchelle repositories
    - addded new gtk2 repo; renamed outdated "official" one to gtk2-old
    - added new %Repo hash and list() function

0.11  Thu May 12 04:46:47 2005
    - removed some repositories that are gone for good
      ( http://rt.cpan.org/NoAuth/Bug.html?id=12761 )

0.10  Thu May 20 15:30:59 2004
    - updated synopsis

0.09  Sat Mar 13 19:08:08 2004
    - some PerlO values were wrong (no biggie)

0.08  Sat Mar 13 17:46:29 2004
    - added smueller, bribes and soulcage/soulcage58 ("bugs" 5367, 5644, 5477 on rt)

0.07  Wed Nov  5 20:02:09 2003
    - I realized the 0.05 Changes never happened (D'oh)
    - really added pod pointing to guide(s) on setting up a repository

0.06  Wed Nov  5 19:46:05 2003
    - added esoft
    - added log4perl "repository"
    - updated pod

0.05 
    - added jmcnamara repository (he finally made it a repository)
    - added pod pointing to guide(s) on setting up a repository

0.04  Mon Jun  2 17:28:31 2003
    - marked savage repository active (he finally fixed it)

0.03  Fri May 30 14:43:28 2003
    - added savage repository for 5.8 (which should be active soon),
      fixed up some urls (trailing slash is known to mess up some versions of ppm)

0.02  Tue May 27 05:12:34 2003
    - finished writing pod, first upload to cpan

0.01  Fri Apr  4 03:21:25 2003
	- original version; created by h2xs 1.21 with options
		-AX PPM::Repositories
