@@ -1,14 +1,15 @@
 Revision history for Perl extension PPM::Repositories
 
 0.12  (unreleased)
-    - remove smueller repository [http://rt.cpan.org/Ticket/Display.html?id=23979]
-    - remove datetime repository [http://rt.cpan.org/Ticket/Display.html?id=17391]
+    - removed smueller repository [http://rt.cpan.org/Ticket/Display.html?id=23979]
+    - removed datetime repository [http://rt.cpan.org/Ticket/Display.html?id=17391]
     - removed dead repositories: soulcage, esoft, savage, spurkis, crazy, dada, rto
     - removed already commented out repositories: xray, perlxml
     - turned jenda's repository to inactive
     - added tcool and trouchelle repositories
     - addded new gtk2 repo; renamed outdated "official" one to gtk2-old
     - added new %Repo hash and list() function
+    - updated documentation
 
 0.11  Thu May 12 04:46:47 2005
     - removed some repositories that are gone for good
